Added some new unit tests for mostly all the controllers, and worked on fixing the error that was related to creating multiple similar objects in the database