@@ -3,12 +3,15 @@ package com.codefactorygroup.betting.converter;
 import com.codefactorygroup.betting.domain.Competition;
 import com.codefactorygroup.betting.dto.CompetitionDTO;
 import com.codefactorygroup.betting.dto.EventDTO;
+import lombok.NoArgsConstructor;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 
 @Component
 public class CompetitionDTOtoCompetitionConverter implements Converter<CompetitionDTO, Competition> {
@@ -30,7 +33,7 @@ public class CompetitionDTOtoCompetitionConverter implements Converter<Competiti
                 .events(eventDTOS
                         .stream()
                         .map(eventDTOtoEventConverter::convert)
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build();
     }
 }
