@@ -3,12 +3,14 @@ package com.codefactorygroup.betting.converter;
 import com.codefactorygroup.betting.domain.Market;
 import com.codefactorygroup.betting.dto.MarketDTO;
 import com.codefactorygroup.betting.dto.SelectionDTO;
+import lombok.NoArgsConstructor;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 public class MarketDTOtoMarketConverter implements Converter<MarketDTO, Market> {
@@ -29,7 +31,7 @@ public class MarketDTOtoMarketConverter implements Converter<MarketDTO, Market> 
                 .selections(selectionList
                         .stream()
                         .map(selectionDTOtoSelectionConverter::convert)
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build();
     }
 }
